--- a/apworlds.html
+++ b/apworlds.html
@@ -51,7 +51,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (186)</h2>
+                <h2>APWorlds (188)</h2>
 
                 <small><a href="#AHatInTime">A Hat in Time (PC)</a></small>
                 <small><a href="#ALinkToThePast">A Link to the Past (SNES)</a></small>
@@ -79,6 +79,7 @@
                 <small><a href="#CastlevaniaLegacyOfDarkness">Castlevania Legacy of Darkness (N64)</a></small>
                 <small><a href="#CastlevaniaCircleOfTheMoon">Castlevania: Circle of the Moon (GBA)</a></small>
                 <small><a href="#CastlevaniaSymphonyOfTheNight">Castlevania: Symphony of the Night (PSX)</a></small>
+                <small><a href="#CavernOfDreams">Cavern of Dreams (PC)</a></small>
                 <small><a href="#CaveStory">Cave Story (PC)</a></small>
                 <small><a href="#Celeste">Celeste (PC)</a></small>
                 <small><a href="#Celeste64">Celeste 64 (PC)</a></small>
@@ -141,6 +142,7 @@
                 <small><a href="#LittleWitchNobeta">Little Witch Nobeta (PC)</a></small>
                 <small><a href="#Lufia2AncientCave">Lufia II Ancient Cave (SNES)</a></small>
                 <small><a href="#Lunacid">Lunacid (PC)</a></small>
+                <small><a href="#MajorasMask">Majora's Mask (N64/PC)</a></small>
                 <small><a href="#Manual">Manual (Meta)</a></small>
                 <small><a href="#MarioAndLuigiSuperstarSaga">Mario and Luigi: Superstar Saga (GBA)</a></small>
                 <small><a href="#MarioIsMissing">Mario is Missing! (SNES)</a></small>
@@ -477,6 +479,14 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/DorkmasterFlek/SOTN-AP-MapTracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://docs.google.com/document/d/1agsX7VpqmAkJPs0bIESKiKgD_VH1ssRKPtNbBmW2b8k">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1108439196156317818">Link</a>]</li>
+                </ul>
+
+                <h3><span id="CavernOfDreams"></a> Cavern of Dreams (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/wu4/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/wu4/CavernOfDreamsAP/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1189647737210286080">Link</a>]</li>
                 </ul>
 
                 <h3><span id="CaveStory"></a> Cave Story (PC)</h3>
@@ -1027,6 +1037,15 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1176614031067455528">Link</a>]</li>
                 </ul>
 
+                <h3><span id="MajorasMask"></span> Majora's Mask (N64/PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/LittlestCube/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/LittlestCube/Zelda64Recomp/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/LittlestCube/Zelda64Recomp/blob/master/README.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1064439510806564925">Link</a>]</li>
+                </ul>
+
                 <h3><span id="Manual"></span> Manual (Meta)</h3>
 
                 <ul>
@@ -1446,8 +1465,7 @@
                 <h3><span id="SeaOfThieves"></span> Sea of Thieves (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1225633406088646746/1266608861633314848">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1225633406088646746/1259672458806689802">Link</a>]</li>
+                    <li><strong>APWorld + Setup Guide</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1225633406088646746/1269079775197134889">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1225633406088646746">Link</a>]</li>
                 </ul>
 
