--- a/index.html
+++ b/index.html
@@ -46,16 +46,106 @@
                     </p>
                 </header>
 
+                <h2 id="D20240807">August 7, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Metal Gear Rising: Revengeance [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> myPOPGOES [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Mega Man X2 [<a href="apworlds.html#MegaManX2">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240806">August 6, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Freddy Fazbear's Pizzeria Simulator [<a href="apworlds.html#FreddyFazbearsPizzeriaSimulator">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong></li> Mario 3D World [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong></li> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong></li> Peggle Nights [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong></li> Pokemon Platinum [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game Merged</strong> Old School RuneScape [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/1976">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Civilization VI [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3736">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Jazztronauts (Garry's Mod) [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Metal Gear Rising: Revengeance [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240805">August 5, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
                     <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Cavern of Dreams [<a href="apworlds.html#CavernOfDreams">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Freddy Fazbear's Pizzeria Simulator [<a href="apworlds.html#FreddyFazbearsPizzeriaSimulator">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240804">August 4, 2024</h2>
@@ -69,6 +159,14 @@
                     <li><strong>APWorld Update</strong> Pokemon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Prodigal [<a href="apworlds.html#Prodigal">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -235,6 +333,7 @@
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Library of Ruina [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Luigi's Mansion: Dark Moon [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> POPGOES Arcade [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Super Mario Galaxy [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Super Mario Galaxy 2 [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
@@ -376,6 +475,10 @@
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Paper Mario: The Thousand-Year Door [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> POPGOES Arcade [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
