--- a/index.html
+++ b/index.html
@@ -46,9 +46,34 @@
                     </p>
                 </header>
 
+                <h2 id="D20240808">August 8, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Cavern of Dreams [<a href="apworlds.html#CavernOfDreams">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mario and Luigi: Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Cavern of Dreams [<a href="apworlds.html#CavernOfDreams">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240807">August 7, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Cavern of Dreams [<a href="apworlds.html#CavernOfDreams">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Mega Man X3 [<a href="apworlds.html#MegaManX3">Link</a>]</li>
                 </ul>
@@ -62,12 +87,26 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> Cavern of Dreams [<a href="apworlds.html#CavernOfDreams">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>Manual APWorld Update</strong> Metal Gear Rising: Revengeance [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> myPOPGOES [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Ring Fit Adventure [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>New APWorld</strong> Mega Man X2 [<a href="apworlds.html#MegaManX2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> The Henry Stickmin Collection [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Anodyne [<a href="apworlds.html#Anodyne">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> The Wind Waker [<a href="apworlds.html#TheWindWaker">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240806">August 6, 2024</h2>
